syntax = "proto3";
option csharp_namespace = "BlazorBoilerplate.Server";

import "Enumerations.proto";
import "google/protobuf/timestamp.proto";

message GetDatasetRequest { 
  string userId = 1;                      //Unique user id generated by the controller on the create new user request from the frontend. Linked to a AspNetUser saved within the MS Sql database of the frontend (xxxx_xxxx_xxxx_xxxx)
  string datasetId = 2;                   //Unique dataset id generated when inserting a new dataset document into MongoDB (xxxx_xxxx_xxxx_xxxx)
}

message GetDatasetResponse {
  Dataset dataset = 1;                    //Dataset object representing dataset record from MongoDB
}

message GetDatasetsRequest {
  string userId = 1;                      //Unique user id generated by the controller on the create new user request from the frontend. Linked to a AspNetUser saved within the MS Sql database of the frontend (xxxx_xxxx_xxxx_xxxx)
  string type = 2;
}

message GetDatasetsResponse {
  repeated Dataset datasets = 1;          //List of Dataset objects representing dataset record from MongoDB
}

message DeleteDatasetRequest {
  string userId = 1;                      //Unique user id generated by the controller on the create new user request from the frontend. Linked to a AspNetUser saved within the MS Sql database of the frontend (xxxx_xxxx_xxxx_xxxx)
  string datasetId = 2;                   //Unique dataset id generated when inserting a new dataset document into MongoDB (xxxx_xxxx_xxxx_xxxx)
}

message DeleteDatasetResponse {
  
}

message Dataset {
  string id = 1;                          //Unique dataset id generated when inserting a new dataset document into MongoDB (xxxx_xxxx_xxxx_xxxx)
  string name = 2;                        //Display name for a dataset, set by the user on dataset upload
  string type = 3;                        //Dataset type Ontology URI, set by the user on dataset upload
  string path = 4;                        //Absolute system path where the dataset is saved (single file dataset use the file name as ending of the path while multi file dataset will only have is root folder of the dataset)
  string fileConfiguration = 5;           //The current file configuration used to open the dataset as a JSON string 
  repeated string trainingIds = 6;        //List of unique training id that use this dataset for training ML models
  string analysis = 7;                    //The result of the dataset analysis saved as JSON string
}

message CreateDatasetRequest {
    string userId = 1;                    //Unique user id generated by the controller on the create new user request from the frontend. Linked to a AspNetUser saved within the MS Sql database of the frontend (xxxx_xxxx_xxxx_xxxx)
    string fileName = 2;                  //The uploaded file name
    string datasetName = 3;               //The user set dataset display name
    string datasetType = 4;               //The user set dataset type ontology URI
  }
  
message CreateDatasetResponse {
  
  }

message SetDatasetFileConfigurationRequest {
  string userId = 1;                      //Unique user id generated by the controller on the create new user request from the frontend. Linked to a AspNetUser saved within the MS Sql database of the frontend (xxxx_xxxx_xxxx_xxxx)
  string datasetId = 2;                   //Unique dataset id generated when inserting a new dataset document into MongoDB (xxxx_xxxx_xxxx_xxxx)
  string file_configuration = 3;          //The new file configuration to use to read the dataset file as a JSON string
}

message SetDatasetFileConfigurationResponse {

}

message TableColumn {
    string name = 1;                        //The column name defined in the dataset
    DataType type = 2;                      //The dataset type asigned by OMA-ML
    repeated DataType convertibleTypes = 3; //List of dataset types that this column can be converted to
  }
  
message GetTabularDatasetColumnRequest {
    string userId = 1;                      //Unique user id generated by the controller on the create new user request from the frontend. Linked to a AspNetUser saved within the MS Sql database of the frontend (xxxx_xxxx_xxxx_xxxx)
    string datasetId = 2;                   //Unique dataset id generated when inserting a new dataset document into MongoDB (xxxx_xxxx_xxxx_xxxx)
  }
  
message GetTabularDatasetColumnResponse {
    repeated TableColumn columns = 1;       //List of TableColumn objects
  }